<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Satchat</string>
    <string name="login_welcome_blurb">Welcome to Zulip!</string>
    <string name="login_button">Log in</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="server_url">Server URL</string>
    <string name="server_domain">Server domain</string>
    <string name="privacy">Privacy policy</string>
    <string name="logout">Log out</string>
    <string name="force_logged_out">You\'ve been logged out</string>
    <string name="huddle_text">You</string>
    <string name="download_image">Download image</string>
    <string name="copy_link">Copy link</string>
    <string name="open">Open</string>
    <string name="link_image">ImageView of link</string>
    <string name="permission_message">Zulip app needs storage permission.</string>
    <string name="permission_title">Need storage permission</string>
    <string name="downloading">Downloading…</string>
    <string name="topic">Topic</string>
    <string name="refresh">Refresh</string>
    <string name="toast_unable_to_load_image">Unable to load image</string>
    <string name="link_copied">Link copied to clipboard</string>
    <string name="streams_open">Open stream sidebar</string>
    <string name="streams_close">Close stream sidebar</string>
    <string name="press_again_to_exit">Press again to exit</string>

    <!-- Used on the indicator when loading messages -->
    <string name="editing_message">Editing message</string>
    <string name="sending_message">Sending</string>
    <string name="search">Search</string>
    <string name="toolbar_item_private">Private messages</string>
    <string name="reply_to_private_message">Reply to private message</string>
    <string name="narrow_to_this_conversation">Narrow to this conversation</string>
    <string name="copy_message">Copy message</string>
    <string name="edit_message">Edit message</string>
    <string name="message_edit_failed">Error editing message</string>
    <string name="message_edited">Message edited</string>
    <string name="stream_txt">Stream</string>
    <string name="arrow">❯</string>
    <string name="toast_no_internet_connection">No internet connection</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="subject">Topic</string>
    <string name="reply_to_sender">Reply to sender</string>
    <string name="google_app_login_failed">Google Apps login failed for unknown reasons, please contact your distributor.</string>
    <string name="signing_in">Signing in…</string>
    <string name="network_error">Network error</string>
    <string name="invalid_server_domain">Invalid server domain</string>
    <string name="password_required">Password required</string>
    <string name="username_required">Username required</string>
    <string name="server_domain_required">Server domain required</string>
    <string name="invalid_domain">Invalid domain</string>
    <string name="hint_person">Person</string>
    <string name="hint_subject">Topic</string>
    <string name="hint_stream">Stream</string>
    <string name="message_sent">Message sent!</string>
    <string name="message_error">Error sending message</string>
    <string name="stream_error">Please specify stream.</string>
    <string name="stream_not_exists">Stream does not exist.</string>
    <string name="subject_error">Please specify topic.</string>
    <string name="person_error">Please specify recipient.</string>
    <string name="no_message_error">No message written.</string>
    <string name="local_server">Dev backend testing server</string>
    <string name="zulip_dev_login">Zulip Dev login</string>
    <string name="admin_none">Administrators (None)</string>
    <string name="admin">Administrators</string>
    <string name="normal_user">Normal users</string>
    <string name="method_null">Method should not be null</string>
    <string name="method_error">Method not supported</string>
    <string name="tap_message">Tap on a message to compose reply</string>
    <string name="title_login">Login</string>
    <string name="enter">Enter</string>
    <string name="enter_server">Please enter your server URL</string>
    <string name="auth_login">Your server allows these authentication options:</string>
    <string name="another_server">Another server</string>
    <string name="no_message">No messages to receive.</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_today">Today</string>
    <string name="http_or_https">HTTP/HTTPS</string>
    <string name="http_message">HTTP is insecure, and we recommend using it only for testing the Zulip Android app against a development environment. Are you sure you want to use HTTP?</string>
    <string name="http_message_debug">Which scheme you would like to use HTTP or HTTPS?</string>
    <string name="use_https">Use HTTPS</string>
    <string name="use_http">Use HTTP</string>
    <string name="empty_list">Sorry, no messages here.</string>
    <string name="reply_stream">Reply to stream</string>
    <string name="reply_sender">Reply to sender</string>
    <string name="narrow_stream">Narrow to this stream</string>
    <string name="narrow_topic">Narrow to this topic</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_today_default_value">Today\'s messages</string>
    <string name="widget_title">Widget\'s title</string>
    <string name="default_summary_interval">30 minutes</string>
    <string name="update_interval">Update interval</string>
    <string name="default_summary_from">Today</string>
    <string name="widget_title_from">Show messages since</string>
    <string name="no_login_error_widget">First login to Zulip app.</string>
    <string name="toast_login_failed_fetching_backends">Failed to fetch backends!</string>
    <string name="login_activity_toast_login_error">Unknown login error.</string>
    <string name="no_topic_in_message">(no topic)</string>
    <string name="message_copied">Message copied</string>
    <string name="message_starred">Message starred</string>
    <string name="message_un_starred">Message unstarred</string>
    <string name="star_image">Star image</string>
    <string name="star_message">Star message</string>
    <string name="un_star_message">Unstar message</string>
    <string name="login_failed">Unable to login</string>
    <string name="cannot_upload_file">Cannot upload file</string>
    <string name="cannot_find_file">Cannot find requested file</string>
    <string name="failed_to_upload">Failed</string>
    <string name="invalid_file">Invalid file</string>
    <string name="content_description_cancel_icon">cancel icon</string>
    <string name="content_description_search_icon">search icon</string>
    <string name="hint_search_people">Search people</string>
    <string name="hint_search_stream">Search stream</string>
    <string name="register_button">Register</string>
    <string name="image_content_desp">image</string>
    <string name="stream_private_content_desp">stream/private</string>
    <string name="message_muted_content_desp">message muted</string>
    <string name="send_content_desp">send</string>
    <string name="avatar_content_desp">avatar</string>
    <string name="undo_content_desp">undo</string>
    <string name="marker_content_desp">mark</string>
    <string name="back_btn_content_disp">back</string>
    <string name="edit_content_desp">edit</string>
    <string name="crop_content_desp">crop</string>
    <string name="delete_content_desp">delete</string>
    <string name="cancel_content_desp" tools:ignore="ButtonCase">cancel</string>
    <string name="camera_content_desp">take photo</string>
    <string name="menu_one_day_before">One day before</string>
    <string name="enter_date">Enter date</string>
    <string name="message_not_subscribed">Not subscribed to</string>
    <string name="keyword_stream">stream</string>
    <plurals name="new_message" formatted="false">
        <item quantity="one">%1$d new message %2$s</item>
        <item quantity="other">%1$d new messages %2$s</item>
    </plurals>
    <string name="SHOW">SHOW</string>
    <string name="notify_stream" formatted="false">" in %1$s/%2$s"</string>
    <string name="notify_private" formatted="false">from %1$s</string>
    <string name="today_messages">Today\'s messages</string>
    <string name="messages">Messages</string>
    <string name="starred_messages">Starred messages</string>
    <plurals name="new_message_mul_sender">
        <item quantity="one">%d new message</item>
        <item quantity="other">%d new messages</item>
    </plurals>
    <string name="maximum_time_limit_error">Time limit exceeded</string>
    <string name="editing_message_disabled">Editing message is disabled</string>
    <string name="default_delete_text">(deleted)</string>
    <string name="message_edited_tag">(EDITED)</string>
    <string name="progress_bar_description">Loading new messages</string>
    <string name="connecting_to_server">Connecting to server</string>
    <string name="refreshing">Refreshing</string>
    <string name="logging_out">Logging out</string>
    <string name="fetch_edit_message">Preparing message for edit</string>
    <string name="no_edit">No edits detected</string>
    <string name="copy_message_fetch">Copying message to clipboard</string>
    <string name="copy_failed">Copying to clipboard failed</string>
    <string name="try_again_error_msg">Something went wrong, try again</string>
    <string name="mentions">\@-mentions</string>
    <string name="notif_title">Upload to Zulip</string>
    <string name="init_notif_title">Starting upload</string>
    <string name="finish_notif_title">Complete</string>
    <string name="upload_big_file">Yowza, that’s a big file.</string>
    <string name="photo_dialog">Take photo</string>
    <string name="pick_dialog">Pick a file</string>
    <string name="to_string">" to "</string>
    <string name="upload_started_str">Upload started</string>
    <string name="cancel">Cancel</string>
    <string name="no_message_to_display">Sorry, no messages to display!</string>
    <string name="crop">Crop</string>
    <string name="logout_title">Are you sure you want to logout?</string>
    <string name="autoTheme">Auto Night Theme</string>
    <string name="theme">Theme</string>
    <string name="terms">Terms Of Service</string>
    <string name="dayTheme">Day Theme</string>
    <string name="nightTheme">Night Theme</string>
    <!--Placeholder strings-->
    <string name="placeholder_my_stream">MyStream</string>
    <string name="placeholder_short_stream">Short stream</string>
    <string name="placeholder_topic">Topic</string>
    <string name="placeholder_message_here">Message here</string>
    <string name="placeholder_sender_name">Sender name</string>
    <string name="placeholder_social">Social</string>
    <string name="update">Update</string>
    <string name="dont_show_again">Don\'t show again</string>
</resources>
