...
        <FrameLayout
            android:id="@+id/list_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_behavior="com.zulip.android.satchat.util.RemoveViewsOnScroll">

            <include
...
